[package]
name = "yobot"
version = "0.2.0"
authors = ["Stuart Nelson <stuartnelson3@gmail.com>",
           "Martin Conte Mac Donell <martin@lyft.com>"]
repository = "https://github.com/stuartnelson3/yobot"
license = "MIT/Apache-2.0"
description = """
Yobot, a bot for Slack.
"""

[dependencies]
regex = "1"
slack = "0.25"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_derive = "1"
